2008-04-27  Evan Monroig  <evan.monroig@gmail.com>

	* lisp-matrix.asd (lisp-matrix, operation-done-p): automatically
	run tests when calling (ASDF:OOS 'ASDF:TEST-OP 'LISP-MATRIX)

	* tests.lisp (tests): add root test suite

	* fnv-vector.lisp (make-typed-vector): replace NCAT by
	MAKE-SYMBOL*

	* fnv-matrix.lisp (make-typed-matrix): replace NCAT by
	MAKE-SYMBOL*

	* package.lisp (:lisp-matrix): don't import NCAT

	* utils.lisp (make-symbol*): add simple utility to replace NCAT

2008-04-24  Evan Monroig  <evan.monroig@gmail.com>

	* tests.lisp (test-matrix-size): helper function
	(make-matrix-double-1, make-matrix-double-2)
	(make-matrix-double-3, transpose-double): added basic tests

	* lisp-matrix.asd (lisp-matrix): add dependency on fiveam

	* package.lisp (:lisp-matrix): remove dependency on ASDF
	(:lisp-matrix): add dependency on FIVEAM

	* fnv-vector.lisp (make-vector): don't use argument
	INITIAL-ELEMENT-P

	* fnv-matrix.lisp (make-matrix): don't use argument
	INITIAL-ELEMENT-P

	* fnv-vector.lisp (initialize-instance): remove call to next
	method

	* fnv-matrix.lisp (initialize-instance): remove call to next
	method

	* macros.lisp (define-abstract-class): use EQL with TYPE-OF
	instead of TYPEP which is too inclusive

	* fnv-matrix.lisp (matrix-like, matview): modify readers, order of
	slots and options as for vector types
	(matrix-like): nrows and ncols should be accessors as we modify
	them in other parts of the code
	(make-typed-matrix): similar changes to the vector types
	(strides, window): key arguments should be symbols not keywords
	(make-typed-matrix -> initialize-instance :after): remove the
	call to the next method

	* fnv-vector.lisp (vector-like, vecview): replace these classes
	and others so that slots and options are in correct order	
	(double, float, complex-double, complex-float): when calling
	MAKE-TYPED-VECTOR, the type should not be quoted
	(make-typed-vector): re-establish the quoting of the fnv-type
	argument when it is necessary